# snoot4

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/snoot4/be/: __init__.py  alu_test.py  cmp_test.py  decoder.py
src/snoot4/be/units/: __init__.py  alu.py  alu_test.py  arith.py  arith_test.py  cmp.py  cmp_test.py  logic.py  logic_test.py  mem.py  mem_test.py
src/snoot4/rf/: __init__.py  gold.py  sim.py
src/snoot4/tests/: utils.py
src/snoot4/tools/assemble/: __main__.py
